Latest version -LOGIN -REGISTER -RESET PASSWORD

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <activity android:name=".MainActivity" android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
+        <activity android:name=".Login"/>
+        <activity android:name=".Register"/>
+        <activity android:name=".ResetPassword"/>
 
          <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="barcode"/>
     </application>
